# SimpleStudentManager

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  push.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: tools.cmake
include/student_manager/: student_manager.h
source/: student_manager.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: student_manager_tests.cpp
